// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`email rendering tests rendering bid_accepted 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/marketplace/contracts/0x557539e7792dc12a0555f5ff02d6ec0f0bc88e09/tokens/21",
  "actionButtonText": "Check it Out",
  "content": "<p>Your offer of 1.50 MANA was accepted for Netgate male.</p>
",
  "subject": "Your offer was accepted",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/bid_accepted?signature=9ec6a41cd5d70f14ea3ce7f7bfc7278daa1de5627201aa5adeb7b60275e7197d",
}
`;

exports[`email rendering tests rendering bid_received 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/marketplace/account?assetType=nft&section=bids",
  "actionButtonText": "Manage Your Bids",
  "content": "<p>You've received an offer of 1.50 MANA for Space Jams.</p>
",
  "subject": "You've Received a Bid",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/bid_received?signature=d5c3e6e4a1213edcbabd8293b60b109f4d583f896724af67f18d8e1ec0a39e2f",
}
`;

exports[`email rendering tests rendering events_started 1`] = `
{
  "actionButtonLink": "https://play.memetaverse.club/?position=14%2C100&realm=main",
  "actionButtonText": "Jump In",
  "content": "<p>The event <a href="https://play.memetaverse.club/?position=14%2C100&realm=main">Live DJ Music and Dancing in the Unity Café</a> has begun!</p>
",
  "subject": "Jump In - Your Event Has Started!",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/events_started?signature=cd81b69793b500eed74735a88f2be42fa2bf419853b014165860c4304998feba",
}
`;

exports[`email rendering tests rendering events_starts_soon 1`] = `
{
  "actionButtonLink": "https://play.memetaverse.club/?position=-99%2C35&realm=main",
  "actionButtonText": "Go to Event Page",
  "content": "<p>The event <a href="https://play.memetaverse.club/?position=-99%2C35&realm=main">UNMONDAY YOURSELF</a> starts in an hour.</p>
",
  "subject": "An Event You've RSVP'd to Starts Soon",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/events_starts_soon?signature=0477800e313b855d10038d850a7b7450cc86687adc863049450415611d1effe7",
}
`;

exports[`email rendering tests rendering governance_announcement 1`] = `
{
  "content": "<p style="font-weight: 600; font-size: 14px; margin-bottom: 0;">Some title</p>
<p style="display: inline; color: #a09ba8; margin: 4px 0; gap: 5px; flex-wrap: wrap; align-items: center;">
    <a href="https://governance.memetaverse.club/some-link">
        Some content
    </a>
</p>
",
  "subject": "A DAO Announcement Has Been Released",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/null?signature=42ad30f79fb01e2c2ae57f84f34ab8b6bff2b70bc7a9e900e021f0b1fa22e7a8",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/null/governance_announcement?signature=033e9737a5b20c9af782facf62c1e65d637469f20331172456337a0a9bbe492d",
}
`;

exports[`email rendering tests rendering governance_authored_proposal_finished 1`] = `
{
  "actionButtonLink": "https://governance.memetaverse.club/proposal/?id=c9564934-1f5e-44a3-836e-c0e94c1f593f",
  "actionButtonText": "See the Results",
  "content": "<p>The votes are in! Find out the outcome of the voting on your proposal Limit Grants Re-Submissions.</p>
",
  "subject": "Voting Has Ended on Your Proposal",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_authored_proposal_finished?signature=f1ca8c3fd6f39383aa205367335ba70df4f017d676302557ef76b3c37c0eb8f4",
}
`;

exports[`email rendering tests rendering governance_coauthor_requested 1`] = `
{
  "actionButtonLink": "https://governance.memetaverse.club/proposal/?id=cacb1ce3-b5e9-4133-901a-cb787f43871f",
  "actionButtonText": "Respond to the Request",
  "content": "<p>You've been invited to collaborate as a co-author on the proposal DCL Community Video Library.</p>
",
  "subject": "You've Received a Request to Co-Author a Proposal",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_coauthor_requested?signature=ede0f5a009044402cfb42487e7c300f122b5047cb869f4ca4fca6ab4e715413b",
}
`;

exports[`email rendering tests rendering governance_new_comment_on_project_update 1`] = `
{
  "actionButtonLink": "https://governance.memetaverse.club/update/?id=a38ec7d7-7eb2-4f9a-b9c8-363785fdcbd6&proposalId=1b8eef75-add3-49d6-9181-3061daaf22ec",
  "actionButtonText": "Read the Comment",
  "content": "<p>Someone's commented on your project update for Duel Arena P2E Continuum, Refinement &amp; Game Expansion [ Resubmission ].</p>
",
  "subject": "There's a New Comment on Your Project Update",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_new_comment_on_project_update?signature=e2199b81d0ba406972576521fca39817b82720c1221bbfd17427495e8b1b35e3",
}
`;

exports[`email rendering tests rendering governance_new_comment_on_proposal 1`] = `
{
  "actionButtonLink": "https://governance.memetaverse.club/proposal/?id=578d3d3e-9fd2-48cb-bea3-ddc6fb5ab1dd",
  "actionButtonText": "Read the Comment",
  "content": "<p>Someone's commented on your proposal Memetaverse No-Code UI Design Studio.</p>
",
  "subject": "There's a New Comment on Your Proposal",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_new_comment_on_proposal?signature=8aac2dc2f0e423b34fa237c2f780678db04317f546f846612c81f8b785ad1be2",
}
`;

exports[`email rendering tests rendering governance_pitch_passed 1`] = `
{
  "actionButtonLink": "https://governance.memetaverse.club/proposal/?id=c9564934-1f5e-44a3-836e-c0e94c1f593f",
  "actionButtonText": "See the Pitch",
  "content": "<p>The pitch Limit Grants Re-Submissions has passed and can now receive tenders. Help advance this idea by proposing potential solutions.</p>
",
  "subject": "A Pitch You Voted on Has Passed",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_pitch_passed?signature=f62cdb39ed30d32ffcf6304ca423bbef4a15f72d2e75066f8013ef9d639cfe39",
}
`;

exports[`email rendering tests rendering governance_proposal_enacted 1`] = `
{
  "actionButtonLink": "https://governance.memetaverse.club/proposal/?id=578d3d3e-9fd2-48cb-bea3-ddc6fb5ab1dd",
  "actionButtonText": "See Proposal",
  "content": "<p>Congratulations! Your Proposal memetaverse No-Code UI Design Studio has been enacted!</p>
",
  "subject": "Your Proposal's Been Enacted!",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_proposal_enacted?signature=f3dfdad5828adce10d2dbd465c15a6abe00cce0bd743cd5672a206fb331101a2",
}
`;

exports[`email rendering tests rendering governance_tender_passed 1`] = `
{
  "actionButtonLink": "https://governance.memetaverse.club/proposal/?id=c9564934-1f5e-44a3-836e-c0e94c1f593f",
  "actionButtonText": "See the Tender",
  "content": "<p>The tender you voted on Limit Grants Re-Submissions has passed and can now receive bids. If you think you can tackle this solution, make a bid and propose a project!</p>
",
  "subject": "A Tender You Voted on Has Passed",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_tender_passed?signature=55f54b9574722ae7e44aa32dab3c1c941dd5ebe6684f0dae6f963419ac1afd58",
}
`;

exports[`email rendering tests rendering governance_voting_ended_voter 1`] = `
{
  "actionButtonLink": "https://governance.memetaverse.club/proposal/?id=c9564934-1f5e-44a3-836e-c0e94c1f593f",
  "actionButtonText": "See the Results",
  "content": "<p>Voting has ended on the proposal Limit Grants Re-Submissions, see the outcome of your vote!</p>
",
  "subject": "Voting Has Ended on a Proposal You Voted On",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/governance_voting_ended_voter?signature=b990e4bad77532500c9cb86bdfd0ed47fc22e5f4dba9733be46ab2de4a896481",
}
`;

exports[`email rendering tests rendering item_sold 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/marketplace/contracts/0xca520eea5aadff51b48d9e9b3038001a751139ca/tokens/180",
  "actionButtonText": "Go to Wallet",
  "content": "<p>Someone just bought your item HeartPrint Shoes. Congratulations!</p>
",
  "subject": "You've Sold an Item!",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/item_sold?signature=9d39adb74e120e5abcfd5803e621ae2e80fc716d10f171f73bf011a3f6da8a02",
}
`;

exports[`email rendering tests rendering rental_ended 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/marketplace/contracts/0x959e104e1a4db6317fa58f8295f586e1a978c297/tokens/1249/manage",
  "actionButtonText": "See My Assets",
  "content": "<p>The rental period on your LAND 3,2 to 0x135b17eaa25e3e0f3ce8f0a575bcc8867031f77c has ended.</p>
",
  "subject": "Rental Period Ended",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/rental_ended?signature=21a703f932c6e5610468c1d2f2131fe14699976425529b407452769cab6b56ab",
}
`;

exports[`email rendering tests rendering rental_started 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/marketplace/contracts/0x959e104e1a4db6317fa58f8295f586e1a978c297/tokens/5051/manage",
  "actionButtonText": "See My Assets",
  "content": "<p>Your LAND 1,2 has been rented to 0x951a6698f644a9b1c634abc416b9d9902aaf3db9 for 365 days.</p>
",
  "subject": "Your LAND Has Been Rented",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/rental_started?signature=32ef3d8ee29b758d9822c2efc5d62873c015d414ab6740e01a92329725dc6114",
}
`;

exports[`email rendering tests rendering reward_assignment 1`] = `
{
  "actionButtonLink": "",
  "actionButtonText": "Check it Out",
  "content": "<p>Congratulations! You've received MESHfair 2024 Halo for free!</p>
",
  "subject": "You've Received a Free Item!",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/reward_assignment?signature=f0e7a9b4fbf803375b4148cd23f4a07fd84d89b37c91bd1df6b53b1d3d90da32",
}
`;

exports[`email rendering tests rendering royalties_earned 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/marketplace/contracts/0x08cbc78c1b2e2eea7627c39c8adf660d52e3d82c/tokens/945",
  "actionButtonText": "Go to Wallet",
  "content": "<p>Congratulations! You've earned 0.90 MANA in royalties on a secondary sale of your item Blue santa hat.</p>
",
  "subject": "You've Earned Some Royalties!",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/royalties_earned?signature=959d803e1bb8bc4e45820c6e2b82184654968fffb6bae1f6380fbef04a96e0fe",
}
`;

exports[`email rendering tests rendering worlds_access_restored 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/builder/worlds?tab=dcl",
  "actionButtonText": "Manage Worlds",
  "content": "<p>Access to your Worlds has been restored.</p>
",
  "subject": "Access to Your Worlds Has Been Restored",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_access_restored?signature=aeb5c56796a62bda50e2156422fa41c2560afd22268b5a90b9c34609fc6bc3e5",
}
`;

exports[`email rendering tests rendering worlds_access_restricted 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/builder/worlds?tab=dcl",
  "actionButtonText": "Manage Worlds",
  "content": "<p>Access to your Worlds has been restricted due to insufficient World Storage. To regain access, please decrease your
    scene's size or get more storage. Learn more <a href="https://docs.memetaverse.club/creator/worlds/about/#worlds-size-limit">here</a>.</p>
",
  "subject": "Access to Your Worlds Has Been Restricted",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_access_restricted?signature=5e65d8cf2afa3afbc02d9d175b8c5b139312dc80ec1d5e6a79c91662c9918cc8",
}
`;

exports[`email rendering tests rendering worlds_missing_resources 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/builder/worlds?tab=dcl",
  "actionButtonText": "Manage Worlds",
  "content": "<p>Your Worlds have scenes deployed that are larger than your available World Storage. Please rectify this within 48hrs to avoid being restricted access to your Worlds. You can either decrease your scene's size or get more storage.
    Learn more <a href="https://docs.memetaverse.club/creator/worlds/about/#worlds-size-limit">here</a>.</p>
",
  "subject": "[Action Needed] Insufficient World Storage",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_missing_resources?signature=d65886c8b10069f5d1355a2b05199b2059b7e0a48049a1d6531fcbb9d3398eb6",
}
`;

exports[`email rendering tests rendering worlds_permission_granted 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/builder/worlds?tab=dcl",
  "actionButtonText": "Manage Worlds",
  "content": "<p>You've been granted the following World permission(s) to the World el.dcl.eth: access.</p>
",
  "subject": "You've Been Granted New World Permissions",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_permission_granted?signature=807e16ba5e0d7d196158bcc4e02d49d8f26ee6cd4d6b321e0be3b6bfe096799d",
}
`;

exports[`email rendering tests rendering worlds_permission_revoked 1`] = `
{
  "actionButtonLink": "https://memetaverse.club/builder/worlds?tab=dcl",
  "actionButtonText": "Manage Worlds",
  "content": "<p>You no longer have the following permission(s) to the World el.dcl.eth: streaming.</p>
",
  "subject": "You've Had World Permissions Revoked",
  "to": "email@example.com",
  "unsubscribeAllUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678?signature=fd03dab02225f386464bdc0ea85ddffb0dd4ad1bc53e6be420224fd381cc58e5",
  "unsubscribeOneUrl": "https://notifications.memetaverse.club/unsubscribe/0x1234567890ABCDEF1234567890ABCDEF12345678/worlds_permission_revoked?signature=11ecba1cbdb390cf8ea1cd5e13d746d8c7a1f918a2c3e5d641a03b6269176ba6",
}
`;
